	- permit gpg to be used for RSA signatures.
	- permit RSA key sizes larger than 1024 bits.
	- permit RSA/{sha1,sha256,sha384,sha512} signature verification.
	- updated de.po (#162756).
	- added CVSId: tag and SVNId: alias (#162807).
	- added brp-java-gcjcompile build helper.
	- fix: java compiled with -O0 confuses debugedit (#161722).
	- fix: % at end-of-line overflow (#161091).

4.4 -> 4.4.1:
	- force *.py->*.pyo byte code compilation with brp-python-bytecompile.
	- automagically detect and emit "python(abi) = 2.4" dependencies.
	- popt 1.10.1 to preserve newer.
	- use package color as Obsoletes: color.
	- upgrade to db-4.3.27.
	- revert MAGIC_COMPRESS, real fix is in libmagic (#143782).
	- upgrade to file-4.12 internal.
	- mac os x patches (#131943,#131944,#132924,#132926).
	- mac os x patches (#133611, #133612, #134637).
	- build against external/internal neon.
	- add https://svn.uhulinux.hu/packages/dev/zlib/patches/02-rsync.patch
	- changes to build on Mac OS X using darwinports neon/beecrypt.
	- blueprint rpm-4_4 and HEAD to minimize diff spew.
	- add missing #if defined(ENABLE_NLS) (#146184).
	- python: force dbMatch() h# key to be 32 bit integer (#146477).
	- add sqlite internal (build still expects external sqlite3-3.0.8).
	- sqlite: revert to original narrow scoping of cOpen/cClose.
	- fix: length of gpg V4 hash seed was incorrect (#146896).
	- add support for V4 rfc-2440 signatures.
	- sqlite3: run-time endian test rather than chasing <endian.h> (#146752).
	- discover and use getmntinfo if present.
	- perform callbacks as always (#147537).
	- permit build scriptlet interpreters to be individually overridden.
	- zlib: uniqify certain symbols to prevent name space pollution.
	- macosx: include <sys/types.h> so that python sees the u_char typedef.
	- macosx: change to --prefix=/usr rather than /opt/local.
	- use waitpid rather than SIGCHLD reaper.
	- rip out DB_PRIVATE revert if not NPTL, it's not the right thing to do.